# vacation-calendar

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js
api/: Cargo.toml  Program.cs  Startup.cs  WeatherForecast.cs  vacation-calendar.csproj
api/Controllers/: WeatherForecastController.cs
api/Properties/: launchSettings.json
api/src/: main.rs
api/src/controller/: calendar.rs  file.rs  mod.rs
api/src/util/: error.rs  settings.rs
front/: App.svelte  calendar.svelte  day.svelte  main.js
front/content/css/: styles.css
front/tools/: data.js  datesBuilder.js
public/: .rustc_info.json
src/: calendar.svelte  main.js  main.rs
src/controller/: calendar.rs  mod.rs
src/domain/: calendar.rs
src/tools/: data.js  datesBuilder.js
src/util/: auth_header.rs  error.rs  mod.rs  settings.rs  state.rs
