[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-rt = "2.2.0"
actix-files = "0.6.2"
actix-http = "3.2.2"

futures = "0.3.28"
futures-util = "0.3.28"
oauth2 = "4.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0.91"
serde_with = "2.2.0"

env_logger ="0.10.0"
log = "0.4.17"
mime = "0.3.16"

mongodb = "2.3.1"
bson ={ version = "2.5.0", features = ["chrono-0_4"] }

chrono = {version = "0.4.23", features = ["serde"]}
regex = "1"